--- a/index.html
+++ b/index.html
@@ -624,6 +624,31 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="27022021-1">27/02/2021 - Site - Navbar, actualités plus pratique</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Vous en aviez marre de suivre les activités car pour en retrouver une précisément à une date c'est tout un bodel ?</p>
+					<p style="padding: 0 18px;">Hé bien, nous zossie (aussi) !</p>
+					<p style="padding: 0 18px;">Cela faisait un moment que l'on trouvait le système par date bien mais que cela serait mieux avec un sous-menu.</p>
+					<p style="padding: 0 18px;">Chose qui fut faite grâce à un ami d'Antonin, Nenaff (pseudonyme).</p>
+					<p style="padding: 0 18px;">Admirez vous-même le changement ! Bluffant hein ? Non, nous ne nous jetons jamais de fleurs 🙄</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814777132831866890/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="26022021-4">26/02/2021 - Modélisation et impression 3D et CNC - Plaque de devant et ultrason</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La machine Davide s'est remise en route à 3000 à l'heure !</p>
