--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											27/02/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#27022021-1">
+												Site - Navbar, actualités plus pratique
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											26/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -635,15 +645,12 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815165672241496114/unknown.png" alt="Navbar actualités avant" style="padding: 0;">
 								</figure>
 							</div>
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/814777132831866890/image0.jpg" alt="Bonton on/off télécommande" style="padding: 0;">
-								</figure>
-							</div>
-							<div class="tile is-child">
-								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815165679367487538/unknown.png" alt="Navbar actualités avant" style="padding: 0;">
 								</figure>
 							</div>
 						</div>
