--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											28/02/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#28022021-1">
+												Site - Navbar, actualités plus pratique
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											27/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -633,6 +643,44 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="28022021-1">28/02/2021 - Réflexion & Modélisation 3D - Tourelle</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Forcément, après la base du tank, il fallait bien s'attaquer à la tourelle (c'est le cas de le dire).</p>
+					<p style="padding: 0 18px;">Le but d'un tank c'est quand même bien de se défendre non ?</p>
+					<p style="padding: 0 18px;">Nous nous sommes mis à réfléchir.</p>
+					<p style="padding: 0 18px;">Je vous entends dire : "Ouais mais vous aviez déjà designé une tourelle". Effectivement mais la boule que nous voulions faire, même si c'était très mignon, aurait été imprimée totalement en 3D.</p>
+					<p style="padding: 0 18px;">On aurait perdu le charme du bois. Nous avons donc commencé à designer une autre tourelle. Comment allons nous la faire ? Avec des arrondis, carrés, en pente, etc. Premier croquis :</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815645424999596032/unknown.png" alt="Croquis tourelle" style="padding: 0; height: 50px; width: auto;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Finalement, en modélisation 3D, une première idée nous est apparu dans nos esprits.</p>
+					<p style="padding: 0 18px;">Nous voulons garder l'idée de la tourelle entière qui monte et descend. Comme un humain bougerait sa tête. Pour gardé l'esprit tank mais robot (humanoïde).</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/815695743544590356/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815695824923000862/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815696012387287053/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button type="button" class="collapsible" id="27022021-1">27/02/2021 - Site - Navbar, actualités plus pratique</button>
 				<div class="content collapse is-medium">
@@ -1682,6 +1730,25 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://media.discordapp.net/attachments/807610088361164810/814917105308532746/IMG_20210226_184447.jpg" alt="Poid du tank avec l'avant fini">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/807610088361164810/815695743544590356/unknown.png" alt="Modélisation 3D tourelle">
+							</figure>
+						</div>
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815695824923000862/unknown.png" alt="Modélisation 3D tourelle">
+							</figure>
+						</div>
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815696012387287053/unknown.png" alt="Modélisation 3D tourelle">
 							</figure>
 						</div>
 					</div>
