--- a/index.html
+++ b/index.html
@@ -655,14 +655,14 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815645424999596032/unknown.png" alt="Croquis tourelle" style="padding: 0; height: 50px; width: auto;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815645424999596032/unknown.png" alt="Croquis tourelle" style="padding: 0; width: 10rem; height: auto;">
 								</figure>
 							</div>
 						</div>
 					</div>
 					<p style="padding: 0 18px;">Finalement, en modélisation 3D, une première idée nous est apparu dans nos esprits.</p>
 					<p style="padding: 0 18px;">Nous voulons garder l'idée de la tourelle entière qui monte et descend. Comme un humain bougerait sa tête. Pour gardé l'esprit tank mais robot (humanoïde).</p>
-					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
