--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815645424999596032/unknown.png" alt="Croquis tourelle" style="padding: 0; width: 10rem; height: auto;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815645424999596032/unknown.png" alt="Croquis tourelle" style="padding: 0; height: 20rem; width: auto;">
 								</figure>
 							</div>
 						</div>
@@ -1741,11 +1741,15 @@
 								<img src="https://media.discordapp.net/attachments/807610088361164810/815695743544590356/unknown.png" alt="Modélisation 3D tourelle">
 							</figure>
 						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815695824923000862/unknown.png" alt="Modélisation 3D tourelle">
 							</figure>
 						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815696012387287053/unknown.png" alt="Modélisation 3D tourelle">
