--- a/index.html
+++ b/index.html
@@ -294,6 +294,16 @@
 								<div class="navbar-dropdown">
 									<div class="navbar-item dropdown is-hoverable">
 										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
+											01/03/2021
+										</a>
+										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#01032021-1">
+												Modélisation 3D - Tourelle
+											</a>
+										</div>
+									</div>
+									<div class="navbar-item dropdown is-hoverable">
+										<a class="navbar-link dropdown-trigger is-fullwidth"  style="width: 100%;">
 											28/02/2021
 										</a>
 										<div class="dropdown-menu drop2">
@@ -643,6 +653,55 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="01032021-1">01/03/2021 - Modélisation 3D - Tourelle</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Nous trouvions que malgré tout, la première modélisation 3D faisait une tourelle plus tank que robot humanoïde.</p>
+					<p style="padding: 0 18px;">C'est pourquoi on partira sur plusieurs flancs verticaux au lieu de flancs en diagonales.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949726507597934/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815165679367487538/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Nous voulions simuler ce que nous verrons.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815953733249662976/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815955695433285692/IMG_20210301_153539.jpg" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Et enfin, modéliser le bord qui maintiendra les flancs et le dessus de la tourelle.</p>
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815988134164299826/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815989414374801418/unknown.png" alt="Modélisation 3D couvercle tourelle" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button type="button" class="collapsible" id="28022021-1">28/02/2021 - Réflexion & Modélisation 3D - Tourelle</button>
 				<div class="content collapse is-medium">
@@ -1753,6 +1812,22 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815696012387287053/unknown.png" alt="Modélisation 3D tourelle">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949726507597934/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815165679367487538/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
 							</figure>
 						</div>
 					</div>
