--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											01/03/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#01032021-2">
+												"Hack" du servomoteur du tank 2
+											</a>
 											<a class="navbar-item" href="./#01032021-1">
 												Modélisation 3D - Tourelle
 											</a>
@@ -653,6 +656,22 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="01032021-2">01/03/2021 - "Hack" du servomoteur du tank 2</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">On ne vous l'a peut-être pas dit mais nous ne nous limitons pas qu'à un tank !</p>
+					<p style="padding: 0 18px;">A la fin de l'année pour la démo, on espère en avoir deux.</p>
+					<p style="padding: 0 18px;">Entre temps, Ugo a effectué également le trucage.</p>
+					<p style="padding: 0 18px;">On devient des experts dans les trucages/"hackages".</p>
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/815953238259400734/image0.jpg" alt="Modélisation 3D tourelle" style="padding: 0; height: 20rem; width: auto;">
+								</figure>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button type="button" class="collapsible" id="01032021-1">01/03/2021 - Modélisation 3D - Tourelle</button>
 				<div class="content collapse is-medium">
