--- a/index.html
+++ b/index.html
@@ -1839,14 +1839,30 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949726507597934/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949726507597934/unknown.png" alt="Modélisation 3D tourelle">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949827493593108/unknown.png" alt="Modélisation 3D tourelle" style="padding: 0;">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815949827493593108/unknown.png" alt="Modélisation 3D tourelle">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815988134164299826/unknown.png" alt="Modélisation 3D tourelle">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815989414374801418/unknown.png" alt="Modélisation 3D couvercle tourelle">
 							</figure>
 						</div>
 					</div>
