--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											01/03/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#01032021-3">
+												Impression 3D - Pièce tourelle sur l'engrenage
+											</a>
 											<a class="navbar-item" href="./#01032021-2">
 												"Hack" du servomoteur du tank 2
 											</a>
@@ -656,6 +659,20 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="01032021-3">01/03/2021 - Impression 3D - Pièce tourelle sur l'engrenage</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Revenons à notre premier tank, le principale.</p>
+					<p style="padding: 0 18px;">Cette fois c'est la modélisation et l'impression 3D de la pièce qui maintient le canon sur l'engrenage.</p>
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816044532713914378/IMG_20210301_212914.jpg" alt="Modélisation 3D tourelle/canon" style="padding: 0; height: 20rem; width: auto;">
+								</figure>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button type="button" class="collapsible" id="01032021-2">01/03/2021 - "Hack" du servomoteur du tank 2</button>
 				<div class="content collapse is-medium">
@@ -1863,6 +1880,13 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/815989414374801418/unknown.png" alt="Modélisation 3D couvercle tourelle">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816044532713914378/IMG_20210301_212914.jpg" alt="Modélisation 3D tourelle/canon" style="padding: 0; height: 20rem; width: auto;">
 							</figure>
 						</div>
 					</div>
