--- a/index.html
+++ b/index.html
@@ -297,6 +297,9 @@
 											01/03/2021
 										</a>
 										<div class="dropdown-menu drop2">
+											<a class="navbar-item" href="./#01032021-4">
+												Impression 3D - Maintient tourelle et pièce amovible flancs et canon
+											</a>
 											<a class="navbar-item" href="./#01032021-3">
 												Impression 3D - Pièce tourelle sur l'engrenage
 											</a>
@@ -659,6 +662,27 @@
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
+				</div>
+				<button type="button" class="collapsible" id="01032021-4">01/03/2021 - Impression 3D - Maintient tourelle et pièce amovible flancs et canon</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Pour avoir un assez bon roulement tout en ayant un bon maintient de toute la tourelle, nous avons modélisé et imprimé en 3D une bague.</p>
+					<p style="padding: 0 18px;">Celle-ci vient se loger autour du collecteur à balais, soit entre la base du tank et la tourelle.</p>
+					<p style="padding: 0 18px;">Nous en profitons pour réaliser et imprimer la pièce qui va maintenir tous les flancs de la tourelle et le canon aussi.</p>
+					<p style="padding: 0 18px;">C'est cette partie qui va bouger avec le reste. Fixé sur un axe à la pièce précédement modélisée et imprimée (voir la précédente actualité).</p>
+					<div class="tile is-ancestor" style="padding: 0 0 2rem 0;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient" style="padding: 0; height: 20rem; width: auto;">
+								</figure>
+							</div>
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon" style="padding: 0; height: 20rem; width: auto;">
+								</figure>
+							</div>
+						</div>
+					</div>
 				</div>
 				<button type="button" class="collapsible" id="01032021-3">01/03/2021 - Impression 3D - Pièce tourelle sur l'engrenage</button>
 				<div class="content collapse is-medium">
@@ -1887,6 +1911,20 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816044532713914378/IMG_20210301_212914.jpg" alt="Modélisation 3D tourelle/canon" style="padding: 0; height: 20rem; width: auto;">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient" style="padding: 0; height: 20rem; width: auto;">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon" style="padding: 0; height: 20rem; width: auto;">
 							</figure>
 						</div>
 					</div>
