--- a/index.html
+++ b/index.html
@@ -673,12 +673,12 @@
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient" style="padding: 0; height: 20rem; width: auto;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient">
 								</figure>
 							</div>
 							<div class="tile is-child">
 								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon" style="padding: 0; height: 20rem; width: auto;">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon">
 								</figure>
 							</div>
 						</div>
@@ -1910,21 +1910,23 @@
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816044532713914378/IMG_20210301_212914.jpg" alt="Modélisation 3D tourelle/canon" style="padding: 0; height: 20rem; width: auto;">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816044532713914378/IMG_20210301_212914.jpg" alt="Modélisation 3D tourelle/canon">
 							</figure>
 						</div>
 					</div>
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient" style="padding: 0; height: 20rem; width: auto;">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816049570067775549/IMG_20210301_214911.jpg" alt="Bague de maintient">
 							</figure>
 						</div>
 					</div>
+				</div>
+				<div class="tile is-ancestor">
 					<div class="tile is-parent is-horizontal">
 						<div class="tile is-child">
 							<figure class="image">
-								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon" style="padding: 0; height: 20rem; width: auto;">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/816069808742203442/IMG_20210301_230940.jpg" alt="Maintient flancs et canon">
 							</figure>
 						</div>
 					</div>
